<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_24px"
        android:title="@string/bottom_navigation_menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_storage_24px"
        android:title="@string/bottom_navigation_menu_list"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmate"
        android:enabled="true"
        android:icon="@drawable/ic_supervisor_account_24px"
        android:title="@string/bottom_navigation_menu_workmate"
        app:showAsAction="ifRoom" />
</menu>