<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/article_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/resto_name"
            />

        <TextView
            android:id="@+id/restaurant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resto_address" />

        <TextView
            android:id="@+id/restaurant_openinghours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="@string/resto_open" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.95"
        android:orientation="vertical">

        <TextView
            android:id="@+id/restaurant_proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resto_distance"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/restaurant_lovers_ic"
                android:contentDescription="@string/logo_colleagues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/baseline_people_24"
                android:layout_marginHorizontal="5dp"/>

            <TextView
                android:id="@+id/restaurant_lovers_nb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resto_number_colleagues"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/restaurant_star1"
                android:contentDescription="@string/resto_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>
            <ImageView
                android:id="@+id/restaurant_star2"
                android:contentDescription="@string/resto_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>
            <ImageView
                android:id="@+id/restaurant_star3"
                android:contentDescription="@string/resto_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="05dp"
                android:src="@drawable/ic_action_star"/>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/restaurant_photo"
        android:contentDescription="@string/resto_photo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:layout_margin="5dp"/>

</LinearLayout>