<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/buffet"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:alpha="0.7">


<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/ND_photo_imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingTop="8dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher_round"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingStart="10dp">
            <TextView
                android:id="@+id/ND_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/ND_email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
